--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 body {
   background-color: #eceff1;
+  font-family: 'Roboto', sans-serif;
 }
 
 .App-logo {
@@ -14,69 +15,151 @@ body {
   color: white;
 }
 
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
 
 .app-form {
+  margin-top: 7.25%;
   text-align: center;
 }
 
-.app-form > input {
-  height: 42px;
-  width: 200px;
-  font-size: 34px;
+.app-form--input {
   text-align: center;
+  position: relative;
+  height: 42px;
+  width: 75%;
+  font-size: 34px;
+  color: gray;
 }
+
+@media only screen and (min-width: 768px) {
+  .app-form {
+    margin-top: 12.5%;
+  }
+
+  .app-form--input {
+    width: 30vw;
+  }
+}
+
+
+.app-form-fieldset {
+  margin-bottom: 12px;
+}
+
+.app-form--label {
+  display: block;
+  font-size: 32px;
+  margin-bottom: 12px;
+}
+
+
+
+.app-form--submit {
+  width: 75px;
+  height: 29px;
+  border-radius: 5px;
+  background-color: #ff5252;
+  cursor: pointer;
+  color: white;
+  font-size: 14px;
+  border-color: #ff5252;
+  outline: none;
+}
+
+.app-form--submit:hover {
+  opacity: .9;
+}
+
 .tlc-application-container {
   background-color: white;
   border: 1px solid #cfd8dc;
 }
 
 .tlc-application-requirements {
-  margin-left: 12px;
-  margin-bottom: 12px;
+  margin: 43px 7.25% 7.25% 7.25%;
 }
 
 .tlc-application-requirements > h2 {
   margin-bottom: 0;
+  margin-left: 7.25%;
+}
+
+.tlc-application-requirement {
+  position: relative;
+  border-bottom: solid 1px #cfd8dc;
+}
+
+.tlc-application-requirement > p {
+  margin-left: 7.25%;
+  margin-right: 7.25%;
+}
+
+.tlc-application-requirement--type {
+  font-weight: 600;
+}
+
+.tlc-application-requirement--status {
+  display: block;
+  font-weight: 400;
+  font-style: italic;
 }
 
 .tlc-application-error {
   text-align: center;
+  white-space: pre;
 }
 
-.tlc-application-times {
+.tlc-application-footer {
+  position: relative;
+  padding-top: 12px;
+}
+
+.tlc-application-footer--applied {
+  text-align: left;
+}
+
+.tlc-application-footer--updated {
+  position: absolute;
+  right: 12px;
+}
+
+.tlc-application-header {
+  position: relative;
+  padding: 12px 0;
+}
+
+.tlc-application-header--type {
+  position: absolute;
+  left: 12px;
+}
+
+.tlc-application-header--search {
+  position: absolute;
+  right: 12px;
+  cursor: pointer;
+  color: #7BBEDB;
+}
+
+.tlc-application-header--search:hover {
+  opacity: 0.9;
+}
+
+.tlc-application-sub-header {
+  position: relative;
   text-align: center;
 }
 
-.tlc-application-times > span {
-  padding: 12px;
+.tlc-application-sub-header--status {
+  margin-bottom: 3px;
 }
 
-.tlc-application-type {
-  font-size: 24px;
-  text-align: center;
-
-}
-
-.tlc-application-status {
-  text-align: center;
-  font-size: 32px;
+.tlc-application-sub-header--requirements {
+  margin-top: 0;
 }
 
 @media only screen and (min-width: 768px) {
   .tlc-application-container {
-    margin-left: 25%;
-    margin-right: 25%;
+    margin-left: 12.5%;
+    margin-right: 12.5%;
+    margin-top: 7.25%;
   }
 }
