--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,10 @@ body {
   color: gray;
 }
 
+.app-form--input::placeholder {
+  opacity: 0.3;
+}
+
 @media only screen and (min-width: 768px) {
   .app-form {
     margin-top: 12.5%;
