--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,27 @@
+html {
+  height: 100%;
+}
+
+a {
+  color: #ffda10;
+  text-decoration: underline;
+
+}
+
+a:hover {
+  opacity: .8;
+}
+
 body {
   background-color: #eceff1;
   font-family: 'Roboto', sans-serif;
+  background-image: linear-gradient(rgba(0,0,0,.55),rgba(0,0,0,.55)),url(https://www.877calllaw.com/wp-content/uploads/2014/01/NYC-Taxi-Cab-Accidents.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
 }
 
 .app-form {
@@ -33,6 +54,7 @@ body {
 
 .app-form-fieldset {
   margin-bottom: 12px;
+  color: white;
 }
 
 .app-form--label {
@@ -59,7 +81,11 @@ body {
 
 .tlc-application-container {
   background-color: white;
+  opacity: .92;
   border: 1px solid #cfd8dc;
+  max-height: 100vh;
+  overflow-y: scroll;
+
 }
 
 .tlc-application-requirements {
@@ -97,6 +123,8 @@ body {
 .tlc-application-error {
   text-align: center;
   white-space: pre;
+  color: white;
+  margin-top: 12px;
 }
 
 .tlc-application-footer {
@@ -164,6 +192,6 @@ body {
   .tlc-application-container {
     margin-left: 12.5%;
     margin-right: 12.5%;
-    margin-top: 7.25%;
+    height: 100%;
   }
 }
